completed full home page

--- a/index.html
+++ b/index.html
@@ -11,13 +11,25 @@
       href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap"
       rel="stylesheet"
     />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css"
+    />
   </head>
+
   <body>
     <!-- Navbar -->
     <header class="navbar">
       <div class="logo">
-        <img src="" alt="Talentpoint Logo" />
+        <svg class="logo-svg" viewBox="0 0 176 36" xmlns="http://www.w3.org/2000/svg">
+        <path d="M29.7531 11.7252C29.7531 14.8402 27.2279 17.3654 24.1129 17.3654C20.9982 17.3654 18.4731 14.8402 18.4731 11.7252C18.4731 8.61049 20.9982 6.08538 24.1129 6.08538C27.2279 6.08538 29.7531 8.61049 29.7531 11.7252Z" fill="#EFB10F"/>
+        <path fill-rule="evenodd" clip-rule="evenodd" d="M7.68343 22.4329V0.854004H17.492V22.4329C17.492 25.1418 19.6877 27.3374 22.3961 27.3374V37.146C14.2707 37.146 7.68343 30.5587 7.68343 22.4329Z" fill="#EFB10F"/>
+        <path fill-rule="evenodd" clip-rule="evenodd" d="M12.2607 16.7112H0V6.90261H12.2607V16.7112Z" fill="#EFB10F"/>
+        <path fill-rule="evenodd" clip-rule="evenodd" d="M66.1273 8.26562L66.2491 27.4102L64.0501 27.4242L63.9284 8.27964L66.1273 8.26562ZM170.212 14.4777V20.561C170.212 23.2049 172.357 25.3492 175.001 25.3492V27.5485C171.143 27.5485 168.014 24.4191 168.014 20.561V8.27263H170.212V12.2787H174.795V14.4777H170.212ZM39.6716 14.4157V20.5285C39.6716 23.1469 41.8163 25.2872 44.4805 25.2872V27.4862C40.6198 27.4862 37.4727 24.3792 37.4727 20.5285V8.30288H39.6716V12.2167H44.3016V14.4157H39.6716ZM105.496 14.4157V20.5289C105.496 23.1473 107.64 25.2872 110.305 25.2872V27.4862C106.444 27.4862 103.296 24.3792 103.296 20.5289V8.30288H105.496V12.2167H110.126V14.4157H105.496ZM53.5225 14.2367C50.4214 14.2367 47.9077 16.7504 47.9077 19.8515C47.9077 22.9525 50.4214 25.4662 53.5225 25.4662C56.6235 25.4662 59.1372 22.9525 59.1372 19.8515C59.1372 16.7504 56.6235 14.2367 53.5225 14.2367ZM59.1372 14.4172V12.6001H61.3361V27.4611H59.1372V25.2858C57.7167 26.7531 55.7262 27.6651 53.5225 27.6651C49.2072 27.6651 45.7088 24.1667 45.7088 19.8515C45.7088 15.5362 49.2072 12.0378 53.5225 12.0378C55.7262 12.0378 57.7167 12.9498 59.1372 14.4172ZM71.1229 20.43H84.6096L84.5189 19.2468C84.2097 15.21 80.8323 12.0378 76.7177 12.0378C72.3947 12.0378 68.8945 15.5307 68.8945 19.8515C68.8945 24.1723 72.3947 27.6651 76.7177 27.6651C79.8734 27.6651 82.5767 25.8119 83.8219 23.1377L81.8285 22.2094C80.9304 24.1376 78.9868 25.4662 76.7177 25.4662C73.8023 25.4662 71.4126 23.2613 71.1229 20.43ZM76.7177 14.2367C74.1712 14.2367 72.0258 15.9188 71.3307 18.231H82.1059C81.4097 15.921 79.2606 14.2367 76.7177 14.2367ZM120.69 14.2367C117.589 14.2367 115.075 16.7504 115.075 19.8515C115.075 22.9525 117.589 25.4662 120.69 25.4662C123.791 25.4662 126.305 22.9525 126.305 19.8515C126.305 16.7504 123.791 14.2367 120.69 14.2367ZM115.075 25.2858C116.496 26.7531 118.486 27.6651 120.69 27.6651C125.005 27.6651 128.504 24.1667 128.504 19.8515C128.504 15.5362 125.005 12.0378 120.69 12.0378C118.486 12.0378 116.496 12.9498 115.075 14.4172V12.6001H112.876V33.1906H115.075V25.2858ZM137.827 14.2367C134.663 14.2367 132.123 16.7641 132.123 19.8515C132.123 22.9389 134.663 25.4662 137.827 25.4662C140.991 25.4662 143.531 22.9389 143.531 19.8515C143.531 16.7641 140.991 14.2367 137.827 14.2367ZM129.924 19.8515C129.924 15.5222 133.476 12.0378 137.827 12.0378C142.178 12.0378 145.73 15.5222 145.73 19.8515C145.73 24.1807 142.178 27.6651 137.827 27.6651C133.476 27.6651 129.924 24.1807 129.924 19.8515ZM158.619 14.2367C156.168 14.2367 154.168 16.2383 154.168 18.711V27.4611H151.969V12.6001H154.168V13.7545C155.346 12.6879 156.907 12.0378 158.619 12.0378C162.293 12.0378 165.269 15.0326 165.269 18.711V27.4611H163.07V18.711C163.07 16.2383 161.07 14.2367 158.619 14.2367ZM93.9744 14.2925C91.5105 14.2925 89.516 16.2852 89.516 18.728V26.5745H89.4713V27.4172H87.2724V12.6602H89.4713V13.8434C90.6575 12.7569 92.2399 12.0935 93.9744 12.0935C97.644 12.0935 100.631 15.0625 100.631 18.728V27.4172H98.4324V18.728C98.4324 16.2852 96.4379 14.2925 93.9744 14.2925ZM147.123 27.4611V12.2418H149.322V27.4611H147.123Z" fill="#262626"/>
+        <path d="M149.645 9.19114C149.645 10.0062 148.984 10.667 148.169 10.667C147.354 10.667 146.693 10.0062 146.693 9.19114C146.693 8.37613 147.354 7.71533 148.169 7.71533C148.984 7.71533 149.645 8.37613 149.645 9.19114Z" fill="#262626"/>
+      </svg>
       </div>
+      <div class="nav-together">
       <nav>
         <ul class="nav-links">
           <li><a href="#">Why Talentpoint?</a></li>
@@ -29,6 +41,11 @@
         <button class="btn outline">Apply For Remote Work</button>
         <button class="btn filled">Hire Talent</button>
       </div>
+      </div>
+
+      <a href="javascript:void(0);" class="ham-icon" onclick="toggleNav()">
+        <i class="fa fa-bars"></i>
+      </a>
     </header>
 
     <!-- Hero Section -->
@@ -49,13 +66,19 @@
           <div class="image-item">
             <img src="/assests/top left img.png" alt="Man speaking" />
             <div class="label">
-              We take care of<br /><strong>Staffing</strong><br />for your
-              organization
+              <span class="gray-text">We take care of</span><br />
+              <div id="hide-text">
+                <strong id="changeable" class="changeable"></strong><br />
+              </div>
+              <span class="gray-text">for your organization</span>
             </div>
           </div>
           <div class="image-item img-2">
             <img src="/assests/top right img.png" alt="Woman working" />
-            <div class="badge">Hire<br /><strong>With Us</strong></div>
+            <div class="badge">
+              <span class="hire-text">Hire</span><br />
+              <strong id="changeable2" class="changeable"></strong>
+            </div>
           </div>
         </div>
       </div>
@@ -68,7 +91,239 @@
 
     <div id="team-slider-container"></div>
 
-    <div id="black-part"></div>
+    <section class="difference-section">
+      <h2>What makes us different?</h2>
+
+      <div class="features">
+        <div class="feature-box">
+          <i class="fas fa-search"></i>
+          <p>Intensive Vetting</p>
+        </div>
+        <div class="feature-box">
+          <i class="fas fa-users"></i>
+          <p>Top 5% of Talent</p>
+        </div>
+        <div class="feature-box">
+          <i class="fas fa-user-check"></i>
+          <p>Right Talent, Right Fit</p>
+        </div>
+        <div class="feature-box">
+          <i class="fas fa-calendar-check"></i>
+          <p>Hire Within 7 Days</p>
+        </div>
+      </div>
+
+      <p class="note">
+        Work with your talent in a matter of <span>days</span>, not months
+      </p>
+    </section>
+
+    <button id="scrollTopBtn">↑</button>
+
+    <section class="section">
+      <div class="left">
+        <h2>Hire and work with world-class remote talent and teams.</h2>
+        <img src="/assests/downimg.jpeg" alt="Remote team working" />
+      </div>
+      <div class="content">
+        <div class="steps">
+          <div class="step">
+            <div class="step-number">1</div>
+            <div class="step-content">
+              <h3>Vetted candidates</h3>
+              <p>
+                We rigorously select our pre-qualified talent based on
+                communication skills, work ethic, technical expertise, and
+                reliability. Our vetted candidates offer flexible remote,
+                hybrid, or on-site work options to meet your diverse needs.
+              </p>
+            </div>
+          </div>
+
+          <div class="step">
+            <div class="step-number">2</div>
+            <div class="step-content">
+              <h3>Save time, save money</h3>
+              <p>
+                With our efficient process, we can match you with the ideal
+                candidate in as little as 48 hours. Plus, you can rest easy
+                knowing that we handle all aspects of the talent filtering and
+                onboarding process.
+              </p>
+            </div>
+          </div>
+
+          <div class="step">
+            <div class="step-number">3</div>
+            <div class="step-content">
+              <h3>Human resources, payroll, and benefits</h3>
+              <p>
+                We go beyond just matching you with the right talent. We take
+                care of the nitty-gritty details such as contracts and payroll,
+                allowing you to focus on your business goals. And if you feel
+                the need for further interviews, our team is here to assist you
+                every step of the way.
+              </p>
+            </div>
+          </div>
+        </div>
+        <a href="#" class="btnDown">Hire Talent</a>
+      </div>
+    </section>
+
+    <div class="lastblack" id="blackpartend">
+      <p class="specialization-title">Specializations</p>
+    </div>
+
+    <!-- secondlast part start -->
+
+    <section id="secondlastPart">
+      <div class="left-con">
+        <p class="firstText">FAQs</p>
+        <p class="secondText">
+          Get fast answers to your most pressing queries.
+        </p>
+      </div>
+      <div class="right-con">
+        <div class="faq-item">
+          <div class="faq-question">
+            Can we conduct interviews and provide our internal assignments
+            before hiring?
+            <span class="faq-toggle">+</span>
+          </div>
+          <div class="faq-answer">
+            Yes, we highly recommend interviewing the candidate before hiring.
+            We conduct an intensive vetting process to ensure that the talent
+            you choose to work with is highly skilled and technically sound. But
+            don't just take our word for it; test the candidate and make your
+            decision.
+          </div>
+        </div>
+        <div class="faq-item">
+          <div class="faq-question">
+            Why should I use Talentpoint to hunt for candidates?
+            <span class="faq-toggle">+</span>
+          </div>
+          <div class="faq-answer">
+            <p>
+              Talentpoint helps companies connect with vetted talents who can be
+              the right fit for your company. Using Talentpoint to find the best
+              remote, hybrid, or on-site workers can be beneficial for several
+              reasons.<br /><br />
+              We have a large pool of talents, making it easier to find workers
+              with the skills and experience you need. We also provide added
+              convenience and efficiency as we handle all the administrative
+              tasks involved in hiring remote workers so that you can focus only
+              on building.<br /><br />
+              We believe in providing a seamless hiring process to save time and
+              effort for both the employer and the applicant. Additionally, we
+              are specifically designed for hiring remote talents and offer
+              resources and support for managing remote teams and
+              collaboration.<br /><br />
+              At Talentpoint, we believe in providing a seamless hiring process
+              to save time and effort for both the employer and the applicant.
+              We offer access to a pool of vetted talent, making it easier to
+              find the right fit for your company, whether you need remote,
+              hybrid, or on-site workers.<br /><br />
+              We also provide added convenience by handling administrative
+              tasks, allowing you to focus on building your business.
+            </p>
+          </div>
+        </div>
+        <div class="faq-item">
+          <div class="faq-question">
+            I want to hire remote employees; what is the company's policy on
+            remote work?
+            <span class="faq-toggle">+</span>
+          </div>
+          <div class="faq-answer">
+            The company's policy on remote work is a set of guidelines and rules
+            that outline how the company approaches and supports remote work.
+            This policy will vary depending on the specific company and its
+            culture, but it may include information on topics such as:
+
+            <ul>
+              <li>
+                <strong>Roles for remote work:</strong> The roles and positions
+                eligible for remote work. Project managers, designers, and
+                developers are some of the most popular remote jobs.
+              </li>
+              <li>
+                <strong>Tools:</strong> The tools and technologies that are used
+                to support remote work, including video conferencing, project
+                management, and file sharing.
+              </li>
+              <li>
+                <strong>Company policies:</strong> The policies and procedures
+                for requesting and approving remote work, including any
+                necessary approvals or documentation.
+              </li>
+              <li>
+                <strong>Support:</strong> The support and resources available to
+                remote workers, including training, technology support, and
+                access to company resources.
+              </li>
+            </ul>
+
+            Overall, the company's policy on remote work is an essential
+            reference for employees interested in working remotely. It provides
+            information on the company's approach to remote work and the
+            expectations and requirements for remote workers.
+          </div>
+        </div>
+      </div>
+    </section>
+    <div class="footer">
+      <!-- Left side text block -->
+      <div class="left-side">
+        <div class="logoLast">
+          <img src="/assests/logo.png" alt="Talentpoint Logo" />
+        </div>
+        <p>
+          Talentpoint is the best network of developers, designers, and project
+          managers. Hire and work with world-class remote talent and teams.
+        </p>
+      </div>
+
+      <!-- Right side 3-grid -->
+      <div class="right-side">
+        <div class="grid-item">
+          <ul class="footerMiddle">
+            <p>Company</p>
+            <li>Hire Talent</li>
+            <li>Why Talentpoint?</li>
+            <li>Clients</li>
+            <li>Experts</li>
+            <li>Blogs</li>
+          </ul>
+        </div>
+        <div class="grid-item">
+          <ul class="footerMiddle">
+            <p>Sales & Support</p>
+            <li>Privacy Policy</li>
+            <li>sales@talentpoint.io</li>
+          </ul>
+        </div>
+        <div class="grid-item">
+          <div class="footerMiddle">
+            <p>Follow Us</p>
+            <ul class="footerEndIcons">
+              <li>
+                <a href="#"><i class="fab fa-facebook-f"></i></a>
+              </li>
+              <li>
+                <a href="#"><i class="fab fa-instagram"></i></a>
+              </li>
+              <li>
+                <a href="#"><i class="fab fa-linkedin-in"></i></a>
+              </li>
+            </ul>
+          </div>
+        </div>
+      </div>
+    </div>
+    <div class="footer-separator"></div>
+    <div class="footer-bottom">© 2025 Talentpoint. All Rights Reserved</div>
 
     <!-- Link your JS file -->
     <script src="/js/script.js"></script>
